// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#buildTicketAssigneeRelationships should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "zendesk_user:5812665774109",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "active": true,
            "alias": null,
            "created_at": "2022-07-06T18:46:17Z",
            "custom_role_id": null,
            "default_group_id": null,
            "details": null,
            "email": "customer@example.com",
            "external_id": null,
            "iana_time_zone": "Europe/Belgrade",
            "id": 5812665774109,
            "last_login_at": null,
            "locale": "en-US",
            "locale_id": 1,
            "moderator": false,
            "name": "The Customer",
            "notes": null,
            "only_private_comments": false,
            "organization_id": null,
            "phone": null,
            "photo": Object {
              "content_type": "image/png",
              "content_url": "https://creativice.zendesk.com/system/photos/5812638919325/profile_image_5812665774109_14239391.png",
              "deleted": false,
              "file_name": "profile_image_5812665774109_14239391.png",
              "height": 80,
              "id": 5812638919325,
              "inline": false,
              "mapped_content_url": "https://creativice.zendesk.com/system/photos/5812638919325/profile_image_5812665774109_14239391.png",
              "size": 10183,
              "thumbnails": Array [
                Object {
                  "content_type": "image/png",
                  "content_url": "https://creativice.zendesk.com/system/photos/5812638919325/profile_image_5812665774109_14239391_thumb.png",
                  "deleted": false,
                  "file_name": "profile_image_5812665774109_14239391_thumb.png",
                  "height": 32,
                  "id": 5812670476829,
                  "inline": false,
                  "mapped_content_url": "https://creativice.zendesk.com/system/photos/5812638919325/profile_image_5812665774109_14239391_thumb.png",
                  "size": 2331,
                  "url": "https://creativice.zendesk.com/api/v2/attachments/5812670476829.json",
                  "width": 32,
                },
              ],
              "url": "https://creativice.zendesk.com/api/v2/attachments/5812638919325.json",
              "width": 80,
            },
            "report_csv": false,
            "restricted_agent": true,
            "role": "end-user",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": Array [],
            "ticket_restriction": "requested",
            "time_zone": "Europe/Belgrade",
            "two_factor_auth_enabled": false,
            "updated_at": "2022-07-06T18:46:17Z",
            "url": "https://creativice.zendesk.com/api/v2/users/5812665774109.json",
            "user_fields": Object {},
            "verified": false,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2022-07-06T18:46:17Z",
      "createdOn": undefined,
      "defaultGroupId": undefined,
      "displayName": "The Customer",
      "email": "customer@example.com",
      "ianaTimeZone": "Europe/Belgrade",
      "id": "5812665774109",
      "locale": "en-US",
      "localeId": 1,
      "moderator": false,
      "name": "The Customer",
      "organizationId": undefined,
      "phone": undefined,
      "photoUrl": "https://creativice.zendesk.com/system/photos/5812638919325/profile_image_5812665774109_14239391.png",
      "restrictedAgent": true,
      "role": "end-user",
      "shared": false,
      "suspended": false,
      "timeZone": "Europe/Belgrade",
      "updatedAt": "2022-07-06T18:46:17Z",
      "url": "https://creativice.zendesk.com/api/v2/users/5812665774109.json",
      "username": "customer@example.com",
      "verified": false,
    },
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "zendesk_user:5812690998173",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "active": true,
            "alias": null,
            "created_at": "2022-07-06T18:46:05Z",
            "custom_role_id": 5812670200733,
            "default_group_id": 5812638858781,
            "details": null,
            "email": "stefan@creativice.com",
            "external_id": null,
            "iana_time_zone": "Europe/Belgrade",
            "id": 5812690998173,
            "last_login_at": "2022-07-11T18:05:50Z",
            "locale": "en-US",
            "locale_id": 1,
            "moderator": true,
            "name": "Stefan Virag",
            "notes": null,
            "only_private_comments": false,
            "organization_id": 5812638859421,
            "phone": null,
            "photo": null,
            "report_csv": true,
            "restricted_agent": false,
            "role": "admin",
            "role_type": 4,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": Array [],
            "ticket_restriction": null,
            "time_zone": "Europe/Belgrade",
            "two_factor_auth_enabled": null,
            "updated_at": "2022-07-11T18:05:50Z",
            "url": "https://creativice.zendesk.com/api/v2/users/5812690998173.json",
            "user_fields": Object {},
            "verified": true,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2022-07-06T18:46:05Z",
      "createdOn": undefined,
      "defaultGroupId": 5812638858781,
      "displayName": "Stefan Virag",
      "email": "stefan@creativice.com",
      "ianaTimeZone": "Europe/Belgrade",
      "id": "5812690998173",
      "locale": "en-US",
      "localeId": 1,
      "moderator": true,
      "name": "Stefan Virag",
      "organizationId": 5812638859421,
      "phone": undefined,
      "photoUrl": undefined,
      "restrictedAgent": false,
      "role": "admin",
      "shared": false,
      "suspended": false,
      "timeZone": "Europe/Belgrade",
      "updatedAt": "2022-07-11T18:05:50Z",
      "url": "https://creativice.zendesk.com/api/v2/users/5812690998173.json",
      "username": "stefan@creativice.com",
      "verified": true,
    },
    Object {
      "_class": Array [
        "Record",
      ],
      "_key": "zendesk_ticket:1",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "allow_attachments": true,
            "allow_channelback": false,
            "assignee_id": 5812690998173,
            "brand_id": 5812681174557,
            "collaborator_ids": Array [],
            "created_at": "2022-07-06T18:46:17Z",
            "custom_fields": Array [],
            "description": "Hi there,

I’m sending an email because I’m having a problem setting up your new product. Can you help me troubleshoot?

Thanks,
 The Customer

",
            "due_at": null,
            "email_cc_ids": Array [],
            "external_id": null,
            "follower_ids": Array [],
            "followup_ids": Array [],
            "forum_topic_id": null,
            "group_id": 5812638858781,
            "has_incidents": false,
            "id": 1,
            "is_public": true,
            "organization_id": null,
            "priority": "normal",
            "problem_id": null,
            "raw_subject": "Sample ticket: Meet the ticket",
            "recipient": null,
            "requester_id": 5812665774109,
            "satisfaction_rating": null,
            "sharing_agreement_ids": Array [],
            "status": "open",
            "subject": "Sample ticket: Meet the ticket",
            "submitter_id": 5812690998173,
            "tags": Array [
              "sample",
              "support",
              "zendesk",
            ],
            "ticket_form_id": 5812670359197,
            "type": "incident",
            "updated_at": "2022-07-06T18:46:17Z",
            "url": "https://creativice.zendesk.com/api/v2/tickets/1.json",
            "via": Object {
              "channel": "sample_ticket",
              "source": Object {
                "from": Object {},
                "rel": null,
                "to": Object {},
              },
            },
          },
        },
      ],
      "_type": "zendesk_ticket",
      "active": undefined,
      "assigneeEmail": undefined,
      "assigneeId": 5812690998173,
      "brandId": 5812681174557,
      "collaboratorIds": Array [],
      "createdAt": "2022-07-06T18:46:17Z",
      "createdOn": undefined,
      "description": "Hi there,

I’m sending an email because I’m having a problem setting up your new product. Can you help me troubleshoot?

Thanks,
 The Customer

",
      "displayName": "Sample ticket: Meet the ticket",
      "dueAt": undefined,
      "emailCcIds": Array [],
      "followerIds": Array [],
      "forumTopicId": undefined,
      "groupId": 5812638858781,
      "hasIncidents": false,
      "id": "1",
      "name": "Sample ticket: Meet the ticket",
      "organizationId": undefined,
      "priority": "normal",
      "problemId": undefined,
      "queries": Array [
        "Hi there,

I’m sending an email because I’m having a problem setting up your new product. Can you help me troubleshoot?

Thanks,
 The Customer

",
      ],
      "recipient": undefined,
      "requestedId": undefined,
      "requesterId": 5812665774109,
      "status": "open",
      "submitterId": 5812690998173,
      "tags": Array [
        "sample",
        "support",
        "zendesk",
      ],
      "type": "incident",
      "url": "https://creativice.zendesk.com/api/v2/tickets/1.json",
    },
    Object {
      "_class": Array [
        "Record",
      ],
      "_key": "zendesk_ticket:2",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "allow_attachments": true,
            "allow_channelback": false,
            "assignee_id": 5812690998173,
            "brand_id": 5812681174557,
            "collaborator_ids": Array [],
            "created_at": "2022-07-11T15:33:00Z",
            "custom_fields": Array [],
            "description": "Test",
            "due_at": null,
            "email_cc_ids": Array [],
            "external_id": null,
            "follower_ids": Array [],
            "followup_ids": Array [],
            "forum_topic_id": null,
            "group_id": 5812638858781,
            "has_incidents": false,
            "id": 2,
            "is_public": true,
            "organization_id": 5812638859421,
            "priority": null,
            "problem_id": null,
            "raw_subject": "test ticket #1",
            "recipient": null,
            "requester_id": 5812690998173,
            "satisfaction_rating": null,
            "sharing_agreement_ids": Array [],
            "status": "open",
            "subject": "test ticket #1",
            "submitter_id": 5812690998173,
            "tags": Array [],
            "ticket_form_id": 5812670359197,
            "type": null,
            "updated_at": "2022-07-11T15:33:00Z",
            "url": "https://creativice.zendesk.com/api/v2/tickets/2.json",
            "via": Object {
              "channel": "web",
              "source": Object {
                "from": Object {},
                "rel": null,
                "to": Object {},
              },
            },
          },
        },
      ],
      "_type": "zendesk_ticket",
      "active": undefined,
      "assigneeEmail": undefined,
      "assigneeId": 5812690998173,
      "brandId": 5812681174557,
      "collaboratorIds": Array [],
      "createdAt": "2022-07-11T15:33:00Z",
      "createdOn": undefined,
      "description": "Test",
      "displayName": "test ticket #1",
      "dueAt": undefined,
      "emailCcIds": Array [],
      "followerIds": Array [],
      "forumTopicId": undefined,
      "groupId": 5812638858781,
      "hasIncidents": false,
      "id": "2",
      "name": "test ticket #1",
      "organizationId": 5812638859421,
      "priority": null,
      "problemId": undefined,
      "queries": Array [
        "Test",
      ],
      "recipient": undefined,
      "requestedId": undefined,
      "requesterId": 5812690998173,
      "status": "open",
      "submitterId": 5812690998173,
      "type": null,
      "url": "https://creativice.zendesk.com/api/v2/tickets/2.json",
    },
    Object {
      "_class": Array [
        "Record",
      ],
      "_key": "zendesk_ticket:3",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "allow_attachments": true,
            "allow_channelback": false,
            "assignee_id": 5812690998173,
            "brand_id": 5812681174557,
            "collaborator_ids": Array [],
            "created_at": "2022-07-11T17:42:31Z",
            "custom_fields": Array [],
            "description": "Test",
            "due_at": null,
            "email_cc_ids": Array [],
            "external_id": null,
            "follower_ids": Array [],
            "followup_ids": Array [],
            "forum_topic_id": null,
            "group_id": 5812638858781,
            "has_incidents": false,
            "id": 3,
            "is_public": true,
            "organization_id": 5812638859421,
            "priority": null,
            "problem_id": null,
            "raw_subject": "test ticket #2",
            "recipient": null,
            "requester_id": 5812690998173,
            "satisfaction_rating": null,
            "sharing_agreement_ids": Array [],
            "status": "open",
            "subject": "test ticket #2",
            "submitter_id": 5812690998173,
            "tags": Array [],
            "ticket_form_id": 5812670359197,
            "type": null,
            "updated_at": "2022-07-11T17:42:31Z",
            "url": "https://creativice.zendesk.com/api/v2/tickets/3.json",
            "via": Object {
              "channel": "web",
              "source": Object {
                "from": Object {},
                "rel": null,
                "to": Object {},
              },
            },
          },
        },
      ],
      "_type": "zendesk_ticket",
      "active": undefined,
      "assigneeEmail": undefined,
      "assigneeId": 5812690998173,
      "brandId": 5812681174557,
      "collaboratorIds": Array [],
      "createdAt": "2022-07-11T17:42:31Z",
      "createdOn": undefined,
      "description": "Test",
      "displayName": "test ticket #2",
      "dueAt": undefined,
      "emailCcIds": Array [],
      "followerIds": Array [],
      "forumTopicId": undefined,
      "groupId": 5812638858781,
      "hasIncidents": false,
      "id": "3",
      "name": "test ticket #2",
      "organizationId": 5812638859421,
      "priority": null,
      "problemId": undefined,
      "queries": Array [
        "Test",
      ],
      "recipient": undefined,
      "requestedId": undefined,
      "requesterId": 5812690998173,
      "status": "open",
      "submitterId": 5812690998173,
      "type": null,
      "url": "https://creativice.zendesk.com/api/v2/tickets/3.json",
    },
    Object {
      "_class": Array [
        "Record",
      ],
      "_key": "zendesk_ticket:4",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "allow_attachments": true,
            "allow_channelback": false,
            "assignee_id": 5812690998173,
            "brand_id": 5812681174557,
            "collaborator_ids": Array [],
            "created_at": "2022-07-11T17:42:39Z",
            "custom_fields": Array [],
            "description": "Test",
            "due_at": null,
            "email_cc_ids": Array [],
            "external_id": null,
            "follower_ids": Array [],
            "followup_ids": Array [],
            "forum_topic_id": null,
            "group_id": 5812638858781,
            "has_incidents": false,
            "id": 4,
            "is_public": true,
            "organization_id": 5812638859421,
            "priority": null,
            "problem_id": null,
            "raw_subject": "test ticket #3",
            "recipient": null,
            "requester_id": 5812690998173,
            "satisfaction_rating": null,
            "sharing_agreement_ids": Array [],
            "status": "open",
            "subject": "test ticket #3",
            "submitter_id": 5812690998173,
            "tags": Array [],
            "ticket_form_id": 5812670359197,
            "type": null,
            "updated_at": "2022-07-11T17:42:39Z",
            "url": "https://creativice.zendesk.com/api/v2/tickets/4.json",
            "via": Object {
              "channel": "web",
              "source": Object {
                "from": Object {},
                "rel": null,
                "to": Object {},
              },
            },
          },
        },
      ],
      "_type": "zendesk_ticket",
      "active": undefined,
      "assigneeEmail": undefined,
      "assigneeId": 5812690998173,
      "brandId": 5812681174557,
      "collaboratorIds": Array [],
      "createdAt": "2022-07-11T17:42:39Z",
      "createdOn": undefined,
      "description": "Test",
      "displayName": "test ticket #3",
      "dueAt": undefined,
      "emailCcIds": Array [],
      "followerIds": Array [],
      "forumTopicId": undefined,
      "groupId": 5812638858781,
      "hasIncidents": false,
      "id": "4",
      "name": "test ticket #3",
      "organizationId": 5812638859421,
      "priority": null,
      "problemId": undefined,
      "queries": Array [
        "Test",
      ],
      "recipient": undefined,
      "requestedId": undefined,
      "requesterId": 5812690998173,
      "status": "open",
      "submitterId": 5812690998173,
      "type": null,
      "url": "https://creativice.zendesk.com/api/v2/tickets/4.json",
    },
    Object {
      "_class": Array [
        "Record",
      ],
      "_key": "zendesk_ticket:5",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "allow_attachments": true,
            "allow_channelback": false,
            "assignee_id": 5812690998173,
            "brand_id": 5812681174557,
            "collaborator_ids": Array [],
            "created_at": "2022-07-11T17:42:46Z",
            "custom_fields": Array [],
            "description": "Test",
            "due_at": null,
            "email_cc_ids": Array [],
            "external_id": null,
            "follower_ids": Array [],
            "followup_ids": Array [],
            "forum_topic_id": null,
            "group_id": 5812638858781,
            "has_incidents": false,
            "id": 5,
            "is_public": true,
            "organization_id": 5812638859421,
            "priority": null,
            "problem_id": null,
            "raw_subject": "test ticket #4",
            "recipient": null,
            "requester_id": 5812690998173,
            "satisfaction_rating": null,
            "sharing_agreement_ids": Array [],
            "status": "open",
            "subject": "test ticket #4",
            "submitter_id": 5812690998173,
            "tags": Array [],
            "ticket_form_id": 5812670359197,
            "type": null,
            "updated_at": "2022-07-11T17:42:46Z",
            "url": "https://creativice.zendesk.com/api/v2/tickets/5.json",
            "via": Object {
              "channel": "web",
              "source": Object {
                "from": Object {},
                "rel": null,
                "to": Object {},
              },
            },
          },
        },
      ],
      "_type": "zendesk_ticket",
      "active": undefined,
      "assigneeEmail": undefined,
      "assigneeId": 5812690998173,
      "brandId": 5812681174557,
      "collaboratorIds": Array [],
      "createdAt": "2022-07-11T17:42:46Z",
      "createdOn": undefined,
      "description": "Test",
      "displayName": "test ticket #4",
      "dueAt": undefined,
      "emailCcIds": Array [],
      "followerIds": Array [],
      "forumTopicId": undefined,
      "groupId": 5812638858781,
      "hasIncidents": false,
      "id": "5",
      "name": "test ticket #4",
      "organizationId": 5812638859421,
      "priority": null,
      "problemId": undefined,
      "queries": Array [
        "Test",
      ],
      "recipient": undefined,
      "requestedId": undefined,
      "requesterId": 5812690998173,
      "status": "open",
      "submitterId": 5812690998173,
      "type": null,
      "url": "https://creativice.zendesk.com/api/v2/tickets/5.json",
    },
    Object {
      "_class": Array [
        "Record",
      ],
      "_key": "zendesk_ticket:6",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "allow_attachments": true,
            "allow_channelback": false,
            "assignee_id": 5812690998173,
            "brand_id": 5812681174557,
            "collaborator_ids": Array [],
            "created_at": "2022-07-11T17:42:55Z",
            "custom_fields": Array [],
            "description": "Test",
            "due_at": null,
            "email_cc_ids": Array [],
            "external_id": null,
            "follower_ids": Array [],
            "followup_ids": Array [],
            "forum_topic_id": null,
            "group_id": 5812638858781,
            "has_incidents": false,
            "id": 6,
            "is_public": true,
            "organization_id": 5812638859421,
            "priority": null,
            "problem_id": null,
            "raw_subject": "test ticket #4",
            "recipient": null,
            "requester_id": 5812690998173,
            "satisfaction_rating": null,
            "sharing_agreement_ids": Array [],
            "status": "open",
            "subject": "test ticket #4",
            "submitter_id": 5812690998173,
            "tags": Array [],
            "ticket_form_id": 5812670359197,
            "type": null,
            "updated_at": "2022-07-11T17:42:55Z",
            "url": "https://creativice.zendesk.com/api/v2/tickets/6.json",
            "via": Object {
              "channel": "web",
              "source": Object {
                "from": Object {},
                "rel": null,
                "to": Object {},
              },
            },
          },
        },
      ],
      "_type": "zendesk_ticket",
      "active": undefined,
      "assigneeEmail": undefined,
      "assigneeId": 5812690998173,
      "brandId": 5812681174557,
      "collaboratorIds": Array [],
      "createdAt": "2022-07-11T17:42:55Z",
      "createdOn": undefined,
      "description": "Test",
      "displayName": "test ticket #4",
      "dueAt": undefined,
      "emailCcIds": Array [],
      "followerIds": Array [],
      "forumTopicId": undefined,
      "groupId": 5812638858781,
      "hasIncidents": false,
      "id": "6",
      "name": "test ticket #4",
      "organizationId": 5812638859421,
      "priority": null,
      "problemId": undefined,
      "queries": Array [
        "Test",
      ],
      "recipient": undefined,
      "requestedId": undefined,
      "requesterId": 5812690998173,
      "status": "open",
      "submitterId": 5812690998173,
      "type": null,
      "url": "https://creativice.zendesk.com/api/v2/tickets/6.json",
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "ASSIGNED",
      "_fromEntityKey": "zendesk_user:5812690998173",
      "_key": "zendesk_user:5812690998173|assigned|zendesk_ticket:1",
      "_toEntityKey": "zendesk_ticket:1",
      "_type": "zendesk_user_assigned_ticket",
      "displayName": "ASSIGNED",
    },
    Object {
      "_class": "ASSIGNED",
      "_fromEntityKey": "zendesk_user:5812690998173",
      "_key": "zendesk_user:5812690998173|assigned|zendesk_ticket:2",
      "_toEntityKey": "zendesk_ticket:2",
      "_type": "zendesk_user_assigned_ticket",
      "displayName": "ASSIGNED",
    },
    Object {
      "_class": "ASSIGNED",
      "_fromEntityKey": "zendesk_user:5812690998173",
      "_key": "zendesk_user:5812690998173|assigned|zendesk_ticket:3",
      "_toEntityKey": "zendesk_ticket:3",
      "_type": "zendesk_user_assigned_ticket",
      "displayName": "ASSIGNED",
    },
    Object {
      "_class": "ASSIGNED",
      "_fromEntityKey": "zendesk_user:5812690998173",
      "_key": "zendesk_user:5812690998173|assigned|zendesk_ticket:4",
      "_toEntityKey": "zendesk_ticket:4",
      "_type": "zendesk_user_assigned_ticket",
      "displayName": "ASSIGNED",
    },
    Object {
      "_class": "ASSIGNED",
      "_fromEntityKey": "zendesk_user:5812690998173",
      "_key": "zendesk_user:5812690998173|assigned|zendesk_ticket:5",
      "_toEntityKey": "zendesk_ticket:5",
      "_type": "zendesk_user_assigned_ticket",
      "displayName": "ASSIGNED",
    },
    Object {
      "_class": "ASSIGNED",
      "_fromEntityKey": "zendesk_user:5812690998173",
      "_key": "zendesk_user:5812690998173|assigned|zendesk_ticket:6",
      "_toEntityKey": "zendesk_ticket:6",
      "_type": "zendesk_user_assigned_ticket",
      "displayName": "ASSIGNED",
    },
  ],
  "encounteredTypes": Array [
    "zendesk_user",
    "zendesk_ticket",
    "zendesk_user_assigned_ticket",
  ],
  "numCollectedEntities": 8,
  "numCollectedRelationships": 6,
}
`;

exports[`#buildTicketGroupRelationships should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Record",
      ],
      "_key": "zendesk_ticket:1",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "allow_attachments": true,
            "allow_channelback": false,
            "assignee_id": 5812690998173,
            "brand_id": 5812681174557,
            "collaborator_ids": Array [],
            "created_at": "2022-07-06T18:46:17Z",
            "custom_fields": Array [],
            "description": "Hi there,

I’m sending an email because I’m having a problem setting up your new product. Can you help me troubleshoot?

Thanks,
 The Customer

",
            "due_at": null,
            "email_cc_ids": Array [],
            "external_id": null,
            "follower_ids": Array [],
            "followup_ids": Array [],
            "forum_topic_id": null,
            "group_id": 5812638858781,
            "has_incidents": false,
            "id": 1,
            "is_public": true,
            "organization_id": null,
            "priority": "normal",
            "problem_id": null,
            "raw_subject": "Sample ticket: Meet the ticket",
            "recipient": null,
            "requester_id": 5812665774109,
            "satisfaction_rating": null,
            "sharing_agreement_ids": Array [],
            "status": "open",
            "subject": "Sample ticket: Meet the ticket",
            "submitter_id": 5812690998173,
            "tags": Array [
              "sample",
              "support",
              "zendesk",
            ],
            "ticket_form_id": 5812670359197,
            "type": "incident",
            "updated_at": "2022-07-06T18:46:17Z",
            "url": "https://creativice.zendesk.com/api/v2/tickets/1.json",
            "via": Object {
              "channel": "sample_ticket",
              "source": Object {
                "from": Object {},
                "rel": null,
                "to": Object {},
              },
            },
          },
        },
      ],
      "_type": "zendesk_ticket",
      "active": undefined,
      "assigneeEmail": undefined,
      "assigneeId": 5812690998173,
      "brandId": 5812681174557,
      "collaboratorIds": Array [],
      "createdAt": "2022-07-06T18:46:17Z",
      "createdOn": undefined,
      "description": "Hi there,

I’m sending an email because I’m having a problem setting up your new product. Can you help me troubleshoot?

Thanks,
 The Customer

",
      "displayName": "Sample ticket: Meet the ticket",
      "dueAt": undefined,
      "emailCcIds": Array [],
      "followerIds": Array [],
      "forumTopicId": undefined,
      "groupId": 5812638858781,
      "hasIncidents": false,
      "id": "1",
      "name": "Sample ticket: Meet the ticket",
      "organizationId": undefined,
      "priority": "normal",
      "problemId": undefined,
      "queries": Array [
        "Hi there,

I’m sending an email because I’m having a problem setting up your new product. Can you help me troubleshoot?

Thanks,
 The Customer

",
      ],
      "recipient": undefined,
      "requestedId": undefined,
      "requesterId": 5812665774109,
      "status": "open",
      "submitterId": 5812690998173,
      "tags": Array [
        "sample",
        "support",
        "zendesk",
      ],
      "type": "incident",
      "url": "https://creativice.zendesk.com/api/v2/tickets/1.json",
    },
    Object {
      "_class": Array [
        "Record",
      ],
      "_key": "zendesk_ticket:2",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "allow_attachments": true,
            "allow_channelback": false,
            "assignee_id": 5812690998173,
            "brand_id": 5812681174557,
            "collaborator_ids": Array [],
            "created_at": "2022-07-11T15:33:00Z",
            "custom_fields": Array [],
            "description": "Test",
            "due_at": null,
            "email_cc_ids": Array [],
            "external_id": null,
            "follower_ids": Array [],
            "followup_ids": Array [],
            "forum_topic_id": null,
            "group_id": 5812638858781,
            "has_incidents": false,
            "id": 2,
            "is_public": true,
            "organization_id": 5812638859421,
            "priority": null,
            "problem_id": null,
            "raw_subject": "test ticket #1",
            "recipient": null,
            "requester_id": 5812690998173,
            "satisfaction_rating": null,
            "sharing_agreement_ids": Array [],
            "status": "open",
            "subject": "test ticket #1",
            "submitter_id": 5812690998173,
            "tags": Array [],
            "ticket_form_id": 5812670359197,
            "type": null,
            "updated_at": "2022-07-11T15:33:00Z",
            "url": "https://creativice.zendesk.com/api/v2/tickets/2.json",
            "via": Object {
              "channel": "web",
              "source": Object {
                "from": Object {},
                "rel": null,
                "to": Object {},
              },
            },
          },
        },
      ],
      "_type": "zendesk_ticket",
      "active": undefined,
      "assigneeEmail": undefined,
      "assigneeId": 5812690998173,
      "brandId": 5812681174557,
      "collaboratorIds": Array [],
      "createdAt": "2022-07-11T15:33:00Z",
      "createdOn": undefined,
      "description": "Test",
      "displayName": "test ticket #1",
      "dueAt": undefined,
      "emailCcIds": Array [],
      "followerIds": Array [],
      "forumTopicId": undefined,
      "groupId": 5812638858781,
      "hasIncidents": false,
      "id": "2",
      "name": "test ticket #1",
      "organizationId": 5812638859421,
      "priority": null,
      "problemId": undefined,
      "queries": Array [
        "Test",
      ],
      "recipient": undefined,
      "requestedId": undefined,
      "requesterId": 5812690998173,
      "status": "open",
      "submitterId": 5812690998173,
      "type": null,
      "url": "https://creativice.zendesk.com/api/v2/tickets/2.json",
    },
    Object {
      "_class": Array [
        "Record",
      ],
      "_key": "zendesk_ticket:3",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "allow_attachments": true,
            "allow_channelback": false,
            "assignee_id": 5812690998173,
            "brand_id": 5812681174557,
            "collaborator_ids": Array [],
            "created_at": "2022-07-11T17:42:31Z",
            "custom_fields": Array [],
            "description": "Test",
            "due_at": null,
            "email_cc_ids": Array [],
            "external_id": null,
            "follower_ids": Array [],
            "followup_ids": Array [],
            "forum_topic_id": null,
            "group_id": 5812638858781,
            "has_incidents": false,
            "id": 3,
            "is_public": true,
            "organization_id": 5812638859421,
            "priority": null,
            "problem_id": null,
            "raw_subject": "test ticket #2",
            "recipient": null,
            "requester_id": 5812690998173,
            "satisfaction_rating": null,
            "sharing_agreement_ids": Array [],
            "status": "open",
            "subject": "test ticket #2",
            "submitter_id": 5812690998173,
            "tags": Array [],
            "ticket_form_id": 5812670359197,
            "type": null,
            "updated_at": "2022-07-11T17:42:31Z",
            "url": "https://creativice.zendesk.com/api/v2/tickets/3.json",
            "via": Object {
              "channel": "web",
              "source": Object {
                "from": Object {},
                "rel": null,
                "to": Object {},
              },
            },
          },
        },
      ],
      "_type": "zendesk_ticket",
      "active": undefined,
      "assigneeEmail": undefined,
      "assigneeId": 5812690998173,
      "brandId": 5812681174557,
      "collaboratorIds": Array [],
      "createdAt": "2022-07-11T17:42:31Z",
      "createdOn": undefined,
      "description": "Test",
      "displayName": "test ticket #2",
      "dueAt": undefined,
      "emailCcIds": Array [],
      "followerIds": Array [],
      "forumTopicId": undefined,
      "groupId": 5812638858781,
      "hasIncidents": false,
      "id": "3",
      "name": "test ticket #2",
      "organizationId": 5812638859421,
      "priority": null,
      "problemId": undefined,
      "queries": Array [
        "Test",
      ],
      "recipient": undefined,
      "requestedId": undefined,
      "requesterId": 5812690998173,
      "status": "open",
      "submitterId": 5812690998173,
      "type": null,
      "url": "https://creativice.zendesk.com/api/v2/tickets/3.json",
    },
    Object {
      "_class": Array [
        "Record",
      ],
      "_key": "zendesk_ticket:4",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "allow_attachments": true,
            "allow_channelback": false,
            "assignee_id": 5812690998173,
            "brand_id": 5812681174557,
            "collaborator_ids": Array [],
            "created_at": "2022-07-11T17:42:39Z",
            "custom_fields": Array [],
            "description": "Test",
            "due_at": null,
            "email_cc_ids": Array [],
            "external_id": null,
            "follower_ids": Array [],
            "followup_ids": Array [],
            "forum_topic_id": null,
            "group_id": 5812638858781,
            "has_incidents": false,
            "id": 4,
            "is_public": true,
            "organization_id": 5812638859421,
            "priority": null,
            "problem_id": null,
            "raw_subject": "test ticket #3",
            "recipient": null,
            "requester_id": 5812690998173,
            "satisfaction_rating": null,
            "sharing_agreement_ids": Array [],
            "status": "open",
            "subject": "test ticket #3",
            "submitter_id": 5812690998173,
            "tags": Array [],
            "ticket_form_id": 5812670359197,
            "type": null,
            "updated_at": "2022-07-11T17:42:39Z",
            "url": "https://creativice.zendesk.com/api/v2/tickets/4.json",
            "via": Object {
              "channel": "web",
              "source": Object {
                "from": Object {},
                "rel": null,
                "to": Object {},
              },
            },
          },
        },
      ],
      "_type": "zendesk_ticket",
      "active": undefined,
      "assigneeEmail": undefined,
      "assigneeId": 5812690998173,
      "brandId": 5812681174557,
      "collaboratorIds": Array [],
      "createdAt": "2022-07-11T17:42:39Z",
      "createdOn": undefined,
      "description": "Test",
      "displayName": "test ticket #3",
      "dueAt": undefined,
      "emailCcIds": Array [],
      "followerIds": Array [],
      "forumTopicId": undefined,
      "groupId": 5812638858781,
      "hasIncidents": false,
      "id": "4",
      "name": "test ticket #3",
      "organizationId": 5812638859421,
      "priority": null,
      "problemId": undefined,
      "queries": Array [
        "Test",
      ],
      "recipient": undefined,
      "requestedId": undefined,
      "requesterId": 5812690998173,
      "status": "open",
      "submitterId": 5812690998173,
      "type": null,
      "url": "https://creativice.zendesk.com/api/v2/tickets/4.json",
    },
    Object {
      "_class": Array [
        "Record",
      ],
      "_key": "zendesk_ticket:5",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "allow_attachments": true,
            "allow_channelback": false,
            "assignee_id": 5812690998173,
            "brand_id": 5812681174557,
            "collaborator_ids": Array [],
            "created_at": "2022-07-11T17:42:46Z",
            "custom_fields": Array [],
            "description": "Test",
            "due_at": null,
            "email_cc_ids": Array [],
            "external_id": null,
            "follower_ids": Array [],
            "followup_ids": Array [],
            "forum_topic_id": null,
            "group_id": 5812638858781,
            "has_incidents": false,
            "id": 5,
            "is_public": true,
            "organization_id": 5812638859421,
            "priority": null,
            "problem_id": null,
            "raw_subject": "test ticket #4",
            "recipient": null,
            "requester_id": 5812690998173,
            "satisfaction_rating": null,
            "sharing_agreement_ids": Array [],
            "status": "open",
            "subject": "test ticket #4",
            "submitter_id": 5812690998173,
            "tags": Array [],
            "ticket_form_id": 5812670359197,
            "type": null,
            "updated_at": "2022-07-11T17:42:46Z",
            "url": "https://creativice.zendesk.com/api/v2/tickets/5.json",
            "via": Object {
              "channel": "web",
              "source": Object {
                "from": Object {},
                "rel": null,
                "to": Object {},
              },
            },
          },
        },
      ],
      "_type": "zendesk_ticket",
      "active": undefined,
      "assigneeEmail": undefined,
      "assigneeId": 5812690998173,
      "brandId": 5812681174557,
      "collaboratorIds": Array [],
      "createdAt": "2022-07-11T17:42:46Z",
      "createdOn": undefined,
      "description": "Test",
      "displayName": "test ticket #4",
      "dueAt": undefined,
      "emailCcIds": Array [],
      "followerIds": Array [],
      "forumTopicId": undefined,
      "groupId": 5812638858781,
      "hasIncidents": false,
      "id": "5",
      "name": "test ticket #4",
      "organizationId": 5812638859421,
      "priority": null,
      "problemId": undefined,
      "queries": Array [
        "Test",
      ],
      "recipient": undefined,
      "requestedId": undefined,
      "requesterId": 5812690998173,
      "status": "open",
      "submitterId": 5812690998173,
      "type": null,
      "url": "https://creativice.zendesk.com/api/v2/tickets/5.json",
    },
    Object {
      "_class": Array [
        "Record",
      ],
      "_key": "zendesk_ticket:6",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "allow_attachments": true,
            "allow_channelback": false,
            "assignee_id": 5812690998173,
            "brand_id": 5812681174557,
            "collaborator_ids": Array [],
            "created_at": "2022-07-11T17:42:55Z",
            "custom_fields": Array [],
            "description": "Test",
            "due_at": null,
            "email_cc_ids": Array [],
            "external_id": null,
            "follower_ids": Array [],
            "followup_ids": Array [],
            "forum_topic_id": null,
            "group_id": 5812638858781,
            "has_incidents": false,
            "id": 6,
            "is_public": true,
            "organization_id": 5812638859421,
            "priority": null,
            "problem_id": null,
            "raw_subject": "test ticket #4",
            "recipient": null,
            "requester_id": 5812690998173,
            "satisfaction_rating": null,
            "sharing_agreement_ids": Array [],
            "status": "open",
            "subject": "test ticket #4",
            "submitter_id": 5812690998173,
            "tags": Array [],
            "ticket_form_id": 5812670359197,
            "type": null,
            "updated_at": "2022-07-11T17:42:55Z",
            "url": "https://creativice.zendesk.com/api/v2/tickets/6.json",
            "via": Object {
              "channel": "web",
              "source": Object {
                "from": Object {},
                "rel": null,
                "to": Object {},
              },
            },
          },
        },
      ],
      "_type": "zendesk_ticket",
      "active": undefined,
      "assigneeEmail": undefined,
      "assigneeId": 5812690998173,
      "brandId": 5812681174557,
      "collaboratorIds": Array [],
      "createdAt": "2022-07-11T17:42:55Z",
      "createdOn": undefined,
      "description": "Test",
      "displayName": "test ticket #4",
      "dueAt": undefined,
      "emailCcIds": Array [],
      "followerIds": Array [],
      "forumTopicId": undefined,
      "groupId": 5812638858781,
      "hasIncidents": false,
      "id": "6",
      "name": "test ticket #4",
      "organizationId": 5812638859421,
      "priority": null,
      "problemId": undefined,
      "queries": Array [
        "Test",
      ],
      "recipient": undefined,
      "requestedId": undefined,
      "requesterId": 5812690998173,
      "status": "open",
      "submitterId": 5812690998173,
      "type": null,
      "url": "https://creativice.zendesk.com/api/v2/tickets/6.json",
    },
    Object {
      "_class": Array [
        "Group",
      ],
      "_key": "zendesk_group:5812638858781",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "created_at": "2022-07-06T18:46:13Z",
            "default": true,
            "deleted": false,
            "description": "",
            "id": 5812638858781,
            "is_public": true,
            "name": "Support",
            "updated_at": "2022-07-06T18:46:13Z",
            "url": "https://creativice.zendesk.com/api/v2/groups/5812638858781.json",
          },
        },
      ],
      "_type": "zendesk_group",
      "createdAt": "2022-07-06T18:46:13Z",
      "createdOn": undefined,
      "deleted": false,
      "description": "",
      "displayName": "Support",
      "id": "5812638858781",
      "name": "Support",
      "updatedAt": "2022-07-06T18:46:13Z",
      "url": "https://creativice.zendesk.com/api/v2/groups/5812638858781.json",
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "HAS",
      "_fromEntityKey": "zendesk_group:5812638858781",
      "_key": "zendesk_group:5812638858781|has|zendesk_ticket:1",
      "_toEntityKey": "zendesk_ticket:1",
      "_type": "zendesk_group_has_ticket",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "zendesk_group:5812638858781",
      "_key": "zendesk_group:5812638858781|has|zendesk_ticket:2",
      "_toEntityKey": "zendesk_ticket:2",
      "_type": "zendesk_group_has_ticket",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "zendesk_group:5812638858781",
      "_key": "zendesk_group:5812638858781|has|zendesk_ticket:3",
      "_toEntityKey": "zendesk_ticket:3",
      "_type": "zendesk_group_has_ticket",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "zendesk_group:5812638858781",
      "_key": "zendesk_group:5812638858781|has|zendesk_ticket:4",
      "_toEntityKey": "zendesk_ticket:4",
      "_type": "zendesk_group_has_ticket",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "zendesk_group:5812638858781",
      "_key": "zendesk_group:5812638858781|has|zendesk_ticket:5",
      "_toEntityKey": "zendesk_ticket:5",
      "_type": "zendesk_group_has_ticket",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "zendesk_group:5812638858781",
      "_key": "zendesk_group:5812638858781|has|zendesk_ticket:6",
      "_toEntityKey": "zendesk_ticket:6",
      "_type": "zendesk_group_has_ticket",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": Array [
    "zendesk_ticket",
    "zendesk_group",
    "zendesk_group_has_ticket",
  ],
  "numCollectedEntities": 7,
  "numCollectedRelationships": 6,
}
`;

exports[`#buildTicketRequesterRelationships should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "zendesk_user:5812665774109",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "active": true,
            "alias": null,
            "created_at": "2022-07-06T18:46:17Z",
            "custom_role_id": null,
            "default_group_id": null,
            "details": null,
            "email": "customer@example.com",
            "external_id": null,
            "iana_time_zone": "Europe/Belgrade",
            "id": 5812665774109,
            "last_login_at": null,
            "locale": "en-US",
            "locale_id": 1,
            "moderator": false,
            "name": "The Customer",
            "notes": null,
            "only_private_comments": false,
            "organization_id": null,
            "phone": null,
            "photo": Object {
              "content_type": "image/png",
              "content_url": "https://creativice.zendesk.com/system/photos/5812638919325/profile_image_5812665774109_14239391.png",
              "deleted": false,
              "file_name": "profile_image_5812665774109_14239391.png",
              "height": 80,
              "id": 5812638919325,
              "inline": false,
              "mapped_content_url": "https://creativice.zendesk.com/system/photos/5812638919325/profile_image_5812665774109_14239391.png",
              "size": 10183,
              "thumbnails": Array [
                Object {
                  "content_type": "image/png",
                  "content_url": "https://creativice.zendesk.com/system/photos/5812638919325/profile_image_5812665774109_14239391_thumb.png",
                  "deleted": false,
                  "file_name": "profile_image_5812665774109_14239391_thumb.png",
                  "height": 32,
                  "id": 5812670476829,
                  "inline": false,
                  "mapped_content_url": "https://creativice.zendesk.com/system/photos/5812638919325/profile_image_5812665774109_14239391_thumb.png",
                  "size": 2331,
                  "url": "https://creativice.zendesk.com/api/v2/attachments/5812670476829.json",
                  "width": 32,
                },
              ],
              "url": "https://creativice.zendesk.com/api/v2/attachments/5812638919325.json",
              "width": 80,
            },
            "report_csv": false,
            "restricted_agent": true,
            "role": "end-user",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": Array [],
            "ticket_restriction": "requested",
            "time_zone": "Europe/Belgrade",
            "two_factor_auth_enabled": false,
            "updated_at": "2022-07-06T18:46:17Z",
            "url": "https://creativice.zendesk.com/api/v2/users/5812665774109.json",
            "user_fields": Object {},
            "verified": false,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2022-07-06T18:46:17Z",
      "createdOn": undefined,
      "defaultGroupId": undefined,
      "displayName": "The Customer",
      "email": "customer@example.com",
      "ianaTimeZone": "Europe/Belgrade",
      "id": "5812665774109",
      "locale": "en-US",
      "localeId": 1,
      "moderator": false,
      "name": "The Customer",
      "organizationId": undefined,
      "phone": undefined,
      "photoUrl": "https://creativice.zendesk.com/system/photos/5812638919325/profile_image_5812665774109_14239391.png",
      "restrictedAgent": true,
      "role": "end-user",
      "shared": false,
      "suspended": false,
      "timeZone": "Europe/Belgrade",
      "updatedAt": "2022-07-06T18:46:17Z",
      "url": "https://creativice.zendesk.com/api/v2/users/5812665774109.json",
      "username": "customer@example.com",
      "verified": false,
    },
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "zendesk_user:5812690998173",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "active": true,
            "alias": null,
            "created_at": "2022-07-06T18:46:05Z",
            "custom_role_id": 5812670200733,
            "default_group_id": 5812638858781,
            "details": null,
            "email": "stefan@creativice.com",
            "external_id": null,
            "iana_time_zone": "Europe/Belgrade",
            "id": 5812690998173,
            "last_login_at": "2022-07-11T18:05:50Z",
            "locale": "en-US",
            "locale_id": 1,
            "moderator": true,
            "name": "Stefan Virag",
            "notes": null,
            "only_private_comments": false,
            "organization_id": 5812638859421,
            "phone": null,
            "photo": null,
            "report_csv": true,
            "restricted_agent": false,
            "role": "admin",
            "role_type": 4,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": Array [],
            "ticket_restriction": null,
            "time_zone": "Europe/Belgrade",
            "two_factor_auth_enabled": null,
            "updated_at": "2022-07-11T18:05:50Z",
            "url": "https://creativice.zendesk.com/api/v2/users/5812690998173.json",
            "user_fields": Object {},
            "verified": true,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2022-07-06T18:46:05Z",
      "createdOn": undefined,
      "defaultGroupId": 5812638858781,
      "displayName": "Stefan Virag",
      "email": "stefan@creativice.com",
      "ianaTimeZone": "Europe/Belgrade",
      "id": "5812690998173",
      "locale": "en-US",
      "localeId": 1,
      "moderator": true,
      "name": "Stefan Virag",
      "organizationId": 5812638859421,
      "phone": undefined,
      "photoUrl": undefined,
      "restrictedAgent": false,
      "role": "admin",
      "shared": false,
      "suspended": false,
      "timeZone": "Europe/Belgrade",
      "updatedAt": "2022-07-11T18:05:50Z",
      "url": "https://creativice.zendesk.com/api/v2/users/5812690998173.json",
      "username": "stefan@creativice.com",
      "verified": true,
    },
    Object {
      "_class": Array [
        "Record",
      ],
      "_key": "zendesk_ticket:1",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "allow_attachments": true,
            "allow_channelback": false,
            "assignee_id": 5812690998173,
            "brand_id": 5812681174557,
            "collaborator_ids": Array [],
            "created_at": "2022-07-06T18:46:17Z",
            "custom_fields": Array [],
            "description": "Hi there,

I’m sending an email because I’m having a problem setting up your new product. Can you help me troubleshoot?

Thanks,
 The Customer

",
            "due_at": null,
            "email_cc_ids": Array [],
            "external_id": null,
            "follower_ids": Array [],
            "followup_ids": Array [],
            "forum_topic_id": null,
            "group_id": 5812638858781,
            "has_incidents": false,
            "id": 1,
            "is_public": true,
            "organization_id": null,
            "priority": "normal",
            "problem_id": null,
            "raw_subject": "Sample ticket: Meet the ticket",
            "recipient": null,
            "requester_id": 5812665774109,
            "satisfaction_rating": null,
            "sharing_agreement_ids": Array [],
            "status": "open",
            "subject": "Sample ticket: Meet the ticket",
            "submitter_id": 5812690998173,
            "tags": Array [
              "sample",
              "support",
              "zendesk",
            ],
            "ticket_form_id": 5812670359197,
            "type": "incident",
            "updated_at": "2022-07-06T18:46:17Z",
            "url": "https://creativice.zendesk.com/api/v2/tickets/1.json",
            "via": Object {
              "channel": "sample_ticket",
              "source": Object {
                "from": Object {},
                "rel": null,
                "to": Object {},
              },
            },
          },
        },
      ],
      "_type": "zendesk_ticket",
      "active": undefined,
      "assigneeEmail": undefined,
      "assigneeId": 5812690998173,
      "brandId": 5812681174557,
      "collaboratorIds": Array [],
      "createdAt": "2022-07-06T18:46:17Z",
      "createdOn": undefined,
      "description": "Hi there,

I’m sending an email because I’m having a problem setting up your new product. Can you help me troubleshoot?

Thanks,
 The Customer

",
      "displayName": "Sample ticket: Meet the ticket",
      "dueAt": undefined,
      "emailCcIds": Array [],
      "followerIds": Array [],
      "forumTopicId": undefined,
      "groupId": 5812638858781,
      "hasIncidents": false,
      "id": "1",
      "name": "Sample ticket: Meet the ticket",
      "organizationId": undefined,
      "priority": "normal",
      "problemId": undefined,
      "queries": Array [
        "Hi there,

I’m sending an email because I’m having a problem setting up your new product. Can you help me troubleshoot?

Thanks,
 The Customer

",
      ],
      "recipient": undefined,
      "requestedId": undefined,
      "requesterId": 5812665774109,
      "status": "open",
      "submitterId": 5812690998173,
      "tags": Array [
        "sample",
        "support",
        "zendesk",
      ],
      "type": "incident",
      "url": "https://creativice.zendesk.com/api/v2/tickets/1.json",
    },
    Object {
      "_class": Array [
        "Record",
      ],
      "_key": "zendesk_ticket:2",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "allow_attachments": true,
            "allow_channelback": false,
            "assignee_id": 5812690998173,
            "brand_id": 5812681174557,
            "collaborator_ids": Array [],
            "created_at": "2022-07-11T15:33:00Z",
            "custom_fields": Array [],
            "description": "Test",
            "due_at": null,
            "email_cc_ids": Array [],
            "external_id": null,
            "follower_ids": Array [],
            "followup_ids": Array [],
            "forum_topic_id": null,
            "group_id": 5812638858781,
            "has_incidents": false,
            "id": 2,
            "is_public": true,
            "organization_id": 5812638859421,
            "priority": null,
            "problem_id": null,
            "raw_subject": "test ticket #1",
            "recipient": null,
            "requester_id": 5812690998173,
            "satisfaction_rating": null,
            "sharing_agreement_ids": Array [],
            "status": "open",
            "subject": "test ticket #1",
            "submitter_id": 5812690998173,
            "tags": Array [],
            "ticket_form_id": 5812670359197,
            "type": null,
            "updated_at": "2022-07-11T15:33:00Z",
            "url": "https://creativice.zendesk.com/api/v2/tickets/2.json",
            "via": Object {
              "channel": "web",
              "source": Object {
                "from": Object {},
                "rel": null,
                "to": Object {},
              },
            },
          },
        },
      ],
      "_type": "zendesk_ticket",
      "active": undefined,
      "assigneeEmail": undefined,
      "assigneeId": 5812690998173,
      "brandId": 5812681174557,
      "collaboratorIds": Array [],
      "createdAt": "2022-07-11T15:33:00Z",
      "createdOn": undefined,
      "description": "Test",
      "displayName": "test ticket #1",
      "dueAt": undefined,
      "emailCcIds": Array [],
      "followerIds": Array [],
      "forumTopicId": undefined,
      "groupId": 5812638858781,
      "hasIncidents": false,
      "id": "2",
      "name": "test ticket #1",
      "organizationId": 5812638859421,
      "priority": null,
      "problemId": undefined,
      "queries": Array [
        "Test",
      ],
      "recipient": undefined,
      "requestedId": undefined,
      "requesterId": 5812690998173,
      "status": "open",
      "submitterId": 5812690998173,
      "type": null,
      "url": "https://creativice.zendesk.com/api/v2/tickets/2.json",
    },
    Object {
      "_class": Array [
        "Record",
      ],
      "_key": "zendesk_ticket:3",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "allow_attachments": true,
            "allow_channelback": false,
            "assignee_id": 5812690998173,
            "brand_id": 5812681174557,
            "collaborator_ids": Array [],
            "created_at": "2022-07-11T17:42:31Z",
            "custom_fields": Array [],
            "description": "Test",
            "due_at": null,
            "email_cc_ids": Array [],
            "external_id": null,
            "follower_ids": Array [],
            "followup_ids": Array [],
            "forum_topic_id": null,
            "group_id": 5812638858781,
            "has_incidents": false,
            "id": 3,
            "is_public": true,
            "organization_id": 5812638859421,
            "priority": null,
            "problem_id": null,
            "raw_subject": "test ticket #2",
            "recipient": null,
            "requester_id": 5812690998173,
            "satisfaction_rating": null,
            "sharing_agreement_ids": Array [],
            "status": "open",
            "subject": "test ticket #2",
            "submitter_id": 5812690998173,
            "tags": Array [],
            "ticket_form_id": 5812670359197,
            "type": null,
            "updated_at": "2022-07-11T17:42:31Z",
            "url": "https://creativice.zendesk.com/api/v2/tickets/3.json",
            "via": Object {
              "channel": "web",
              "source": Object {
                "from": Object {},
                "rel": null,
                "to": Object {},
              },
            },
          },
        },
      ],
      "_type": "zendesk_ticket",
      "active": undefined,
      "assigneeEmail": undefined,
      "assigneeId": 5812690998173,
      "brandId": 5812681174557,
      "collaboratorIds": Array [],
      "createdAt": "2022-07-11T17:42:31Z",
      "createdOn": undefined,
      "description": "Test",
      "displayName": "test ticket #2",
      "dueAt": undefined,
      "emailCcIds": Array [],
      "followerIds": Array [],
      "forumTopicId": undefined,
      "groupId": 5812638858781,
      "hasIncidents": false,
      "id": "3",
      "name": "test ticket #2",
      "organizationId": 5812638859421,
      "priority": null,
      "problemId": undefined,
      "queries": Array [
        "Test",
      ],
      "recipient": undefined,
      "requestedId": undefined,
      "requesterId": 5812690998173,
      "status": "open",
      "submitterId": 5812690998173,
      "type": null,
      "url": "https://creativice.zendesk.com/api/v2/tickets/3.json",
    },
    Object {
      "_class": Array [
        "Record",
      ],
      "_key": "zendesk_ticket:4",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "allow_attachments": true,
            "allow_channelback": false,
            "assignee_id": 5812690998173,
            "brand_id": 5812681174557,
            "collaborator_ids": Array [],
            "created_at": "2022-07-11T17:42:39Z",
            "custom_fields": Array [],
            "description": "Test",
            "due_at": null,
            "email_cc_ids": Array [],
            "external_id": null,
            "follower_ids": Array [],
            "followup_ids": Array [],
            "forum_topic_id": null,
            "group_id": 5812638858781,
            "has_incidents": false,
            "id": 4,
            "is_public": true,
            "organization_id": 5812638859421,
            "priority": null,
            "problem_id": null,
            "raw_subject": "test ticket #3",
            "recipient": null,
            "requester_id": 5812690998173,
            "satisfaction_rating": null,
            "sharing_agreement_ids": Array [],
            "status": "open",
            "subject": "test ticket #3",
            "submitter_id": 5812690998173,
            "tags": Array [],
            "ticket_form_id": 5812670359197,
            "type": null,
            "updated_at": "2022-07-11T17:42:39Z",
            "url": "https://creativice.zendesk.com/api/v2/tickets/4.json",
            "via": Object {
              "channel": "web",
              "source": Object {
                "from": Object {},
                "rel": null,
                "to": Object {},
              },
            },
          },
        },
      ],
      "_type": "zendesk_ticket",
      "active": undefined,
      "assigneeEmail": undefined,
      "assigneeId": 5812690998173,
      "brandId": 5812681174557,
      "collaboratorIds": Array [],
      "createdAt": "2022-07-11T17:42:39Z",
      "createdOn": undefined,
      "description": "Test",
      "displayName": "test ticket #3",
      "dueAt": undefined,
      "emailCcIds": Array [],
      "followerIds": Array [],
      "forumTopicId": undefined,
      "groupId": 5812638858781,
      "hasIncidents": false,
      "id": "4",
      "name": "test ticket #3",
      "organizationId": 5812638859421,
      "priority": null,
      "problemId": undefined,
      "queries": Array [
        "Test",
      ],
      "recipient": undefined,
      "requestedId": undefined,
      "requesterId": 5812690998173,
      "status": "open",
      "submitterId": 5812690998173,
      "type": null,
      "url": "https://creativice.zendesk.com/api/v2/tickets/4.json",
    },
    Object {
      "_class": Array [
        "Record",
      ],
      "_key": "zendesk_ticket:5",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "allow_attachments": true,
            "allow_channelback": false,
            "assignee_id": 5812690998173,
            "brand_id": 5812681174557,
            "collaborator_ids": Array [],
            "created_at": "2022-07-11T17:42:46Z",
            "custom_fields": Array [],
            "description": "Test",
            "due_at": null,
            "email_cc_ids": Array [],
            "external_id": null,
            "follower_ids": Array [],
            "followup_ids": Array [],
            "forum_topic_id": null,
            "group_id": 5812638858781,
            "has_incidents": false,
            "id": 5,
            "is_public": true,
            "organization_id": 5812638859421,
            "priority": null,
            "problem_id": null,
            "raw_subject": "test ticket #4",
            "recipient": null,
            "requester_id": 5812690998173,
            "satisfaction_rating": null,
            "sharing_agreement_ids": Array [],
            "status": "open",
            "subject": "test ticket #4",
            "submitter_id": 5812690998173,
            "tags": Array [],
            "ticket_form_id": 5812670359197,
            "type": null,
            "updated_at": "2022-07-11T17:42:46Z",
            "url": "https://creativice.zendesk.com/api/v2/tickets/5.json",
            "via": Object {
              "channel": "web",
              "source": Object {
                "from": Object {},
                "rel": null,
                "to": Object {},
              },
            },
          },
        },
      ],
      "_type": "zendesk_ticket",
      "active": undefined,
      "assigneeEmail": undefined,
      "assigneeId": 5812690998173,
      "brandId": 5812681174557,
      "collaboratorIds": Array [],
      "createdAt": "2022-07-11T17:42:46Z",
      "createdOn": undefined,
      "description": "Test",
      "displayName": "test ticket #4",
      "dueAt": undefined,
      "emailCcIds": Array [],
      "followerIds": Array [],
      "forumTopicId": undefined,
      "groupId": 5812638858781,
      "hasIncidents": false,
      "id": "5",
      "name": "test ticket #4",
      "organizationId": 5812638859421,
      "priority": null,
      "problemId": undefined,
      "queries": Array [
        "Test",
      ],
      "recipient": undefined,
      "requestedId": undefined,
      "requesterId": 5812690998173,
      "status": "open",
      "submitterId": 5812690998173,
      "type": null,
      "url": "https://creativice.zendesk.com/api/v2/tickets/5.json",
    },
    Object {
      "_class": Array [
        "Record",
      ],
      "_key": "zendesk_ticket:6",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "allow_attachments": true,
            "allow_channelback": false,
            "assignee_id": 5812690998173,
            "brand_id": 5812681174557,
            "collaborator_ids": Array [],
            "created_at": "2022-07-11T17:42:55Z",
            "custom_fields": Array [],
            "description": "Test",
            "due_at": null,
            "email_cc_ids": Array [],
            "external_id": null,
            "follower_ids": Array [],
            "followup_ids": Array [],
            "forum_topic_id": null,
            "group_id": 5812638858781,
            "has_incidents": false,
            "id": 6,
            "is_public": true,
            "organization_id": 5812638859421,
            "priority": null,
            "problem_id": null,
            "raw_subject": "test ticket #4",
            "recipient": null,
            "requester_id": 5812690998173,
            "satisfaction_rating": null,
            "sharing_agreement_ids": Array [],
            "status": "open",
            "subject": "test ticket #4",
            "submitter_id": 5812690998173,
            "tags": Array [],
            "ticket_form_id": 5812670359197,
            "type": null,
            "updated_at": "2022-07-11T17:42:55Z",
            "url": "https://creativice.zendesk.com/api/v2/tickets/6.json",
            "via": Object {
              "channel": "web",
              "source": Object {
                "from": Object {},
                "rel": null,
                "to": Object {},
              },
            },
          },
        },
      ],
      "_type": "zendesk_ticket",
      "active": undefined,
      "assigneeEmail": undefined,
      "assigneeId": 5812690998173,
      "brandId": 5812681174557,
      "collaboratorIds": Array [],
      "createdAt": "2022-07-11T17:42:55Z",
      "createdOn": undefined,
      "description": "Test",
      "displayName": "test ticket #4",
      "dueAt": undefined,
      "emailCcIds": Array [],
      "followerIds": Array [],
      "forumTopicId": undefined,
      "groupId": 5812638858781,
      "hasIncidents": false,
      "id": "6",
      "name": "test ticket #4",
      "organizationId": 5812638859421,
      "priority": null,
      "problemId": undefined,
      "queries": Array [
        "Test",
      ],
      "recipient": undefined,
      "requestedId": undefined,
      "requesterId": 5812690998173,
      "status": "open",
      "submitterId": 5812690998173,
      "type": null,
      "url": "https://creativice.zendesk.com/api/v2/tickets/6.json",
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "OPENED",
      "_fromEntityKey": "zendesk_user:5812665774109",
      "_key": "zendesk_user:5812665774109|opened|zendesk_ticket:1",
      "_toEntityKey": "zendesk_ticket:1",
      "_type": "zendesk_user_opened_ticket",
      "displayName": "OPENED",
    },
    Object {
      "_class": "OPENED",
      "_fromEntityKey": "zendesk_user:5812690998173",
      "_key": "zendesk_user:5812690998173|opened|zendesk_ticket:2",
      "_toEntityKey": "zendesk_ticket:2",
      "_type": "zendesk_user_opened_ticket",
      "displayName": "OPENED",
    },
    Object {
      "_class": "OPENED",
      "_fromEntityKey": "zendesk_user:5812690998173",
      "_key": "zendesk_user:5812690998173|opened|zendesk_ticket:3",
      "_toEntityKey": "zendesk_ticket:3",
      "_type": "zendesk_user_opened_ticket",
      "displayName": "OPENED",
    },
    Object {
      "_class": "OPENED",
      "_fromEntityKey": "zendesk_user:5812690998173",
      "_key": "zendesk_user:5812690998173|opened|zendesk_ticket:4",
      "_toEntityKey": "zendesk_ticket:4",
      "_type": "zendesk_user_opened_ticket",
      "displayName": "OPENED",
    },
    Object {
      "_class": "OPENED",
      "_fromEntityKey": "zendesk_user:5812690998173",
      "_key": "zendesk_user:5812690998173|opened|zendesk_ticket:5",
      "_toEntityKey": "zendesk_ticket:5",
      "_type": "zendesk_user_opened_ticket",
      "displayName": "OPENED",
    },
    Object {
      "_class": "OPENED",
      "_fromEntityKey": "zendesk_user:5812690998173",
      "_key": "zendesk_user:5812690998173|opened|zendesk_ticket:6",
      "_toEntityKey": "zendesk_ticket:6",
      "_type": "zendesk_user_opened_ticket",
      "displayName": "OPENED",
    },
  ],
  "encounteredTypes": Array [
    "zendesk_user",
    "zendesk_ticket",
    "zendesk_user_opened_ticket",
  ],
  "numCollectedEntities": 8,
  "numCollectedRelationships": 6,
}
`;

exports[`#fetchTickets should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Record",
      ],
      "_key": "zendesk_ticket:1",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "allow_attachments": true,
            "allow_channelback": false,
            "assignee_id": 5812690998173,
            "brand_id": 5812681174557,
            "collaborator_ids": Array [],
            "created_at": "2022-07-06T18:46:17Z",
            "custom_fields": Array [],
            "description": "Hi there,

I’m sending an email because I’m having a problem setting up your new product. Can you help me troubleshoot?

Thanks,
 The Customer

",
            "due_at": null,
            "email_cc_ids": Array [],
            "external_id": null,
            "follower_ids": Array [],
            "followup_ids": Array [],
            "forum_topic_id": null,
            "group_id": 5812638858781,
            "has_incidents": false,
            "id": 1,
            "is_public": true,
            "organization_id": null,
            "priority": "normal",
            "problem_id": null,
            "raw_subject": "Sample ticket: Meet the ticket",
            "recipient": null,
            "requester_id": 5812665774109,
            "satisfaction_rating": null,
            "sharing_agreement_ids": Array [],
            "status": "open",
            "subject": "Sample ticket: Meet the ticket",
            "submitter_id": 5812690998173,
            "tags": Array [
              "sample",
              "support",
              "zendesk",
            ],
            "ticket_form_id": 5812670359197,
            "type": "incident",
            "updated_at": "2022-07-06T18:46:17Z",
            "url": "https://creativice.zendesk.com/api/v2/tickets/1.json",
            "via": Object {
              "channel": "sample_ticket",
              "source": Object {
                "from": Object {},
                "rel": null,
                "to": Object {},
              },
            },
          },
        },
      ],
      "_type": "zendesk_ticket",
      "active": undefined,
      "assigneeEmail": undefined,
      "assigneeId": 5812690998173,
      "brandId": 5812681174557,
      "collaboratorIds": Array [],
      "createdAt": "2022-07-06T18:46:17Z",
      "createdOn": undefined,
      "description": "Hi there,

I’m sending an email because I’m having a problem setting up your new product. Can you help me troubleshoot?

Thanks,
 The Customer

",
      "displayName": "Sample ticket: Meet the ticket",
      "dueAt": undefined,
      "emailCcIds": Array [],
      "followerIds": Array [],
      "forumTopicId": undefined,
      "groupId": 5812638858781,
      "hasIncidents": false,
      "id": "1",
      "name": "Sample ticket: Meet the ticket",
      "organizationId": undefined,
      "priority": "normal",
      "problemId": undefined,
      "queries": Array [
        "Hi there,

I’m sending an email because I’m having a problem setting up your new product. Can you help me troubleshoot?

Thanks,
 The Customer

",
      ],
      "recipient": undefined,
      "requestedId": undefined,
      "requesterId": 5812665774109,
      "status": "open",
      "submitterId": 5812690998173,
      "tags": Array [
        "sample",
        "support",
        "zendesk",
      ],
      "type": "incident",
      "url": "https://creativice.zendesk.com/api/v2/tickets/1.json",
    },
    Object {
      "_class": Array [
        "Record",
      ],
      "_key": "zendesk_ticket:2",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "allow_attachments": true,
            "allow_channelback": false,
            "assignee_id": 5812690998173,
            "brand_id": 5812681174557,
            "collaborator_ids": Array [],
            "created_at": "2022-07-11T15:33:00Z",
            "custom_fields": Array [],
            "description": "Test",
            "due_at": null,
            "email_cc_ids": Array [],
            "external_id": null,
            "follower_ids": Array [],
            "followup_ids": Array [],
            "forum_topic_id": null,
            "group_id": 5812638858781,
            "has_incidents": false,
            "id": 2,
            "is_public": true,
            "organization_id": 5812638859421,
            "priority": null,
            "problem_id": null,
            "raw_subject": "test ticket #1",
            "recipient": null,
            "requester_id": 5812690998173,
            "satisfaction_rating": null,
            "sharing_agreement_ids": Array [],
            "status": "open",
            "subject": "test ticket #1",
            "submitter_id": 5812690998173,
            "tags": Array [],
            "ticket_form_id": 5812670359197,
            "type": null,
            "updated_at": "2022-07-11T15:33:00Z",
            "url": "https://creativice.zendesk.com/api/v2/tickets/2.json",
            "via": Object {
              "channel": "web",
              "source": Object {
                "from": Object {},
                "rel": null,
                "to": Object {},
              },
            },
          },
        },
      ],
      "_type": "zendesk_ticket",
      "active": undefined,
      "assigneeEmail": undefined,
      "assigneeId": 5812690998173,
      "brandId": 5812681174557,
      "collaboratorIds": Array [],
      "createdAt": "2022-07-11T15:33:00Z",
      "createdOn": undefined,
      "description": "Test",
      "displayName": "test ticket #1",
      "dueAt": undefined,
      "emailCcIds": Array [],
      "followerIds": Array [],
      "forumTopicId": undefined,
      "groupId": 5812638858781,
      "hasIncidents": false,
      "id": "2",
      "name": "test ticket #1",
      "organizationId": 5812638859421,
      "priority": null,
      "problemId": undefined,
      "queries": Array [
        "Test",
      ],
      "recipient": undefined,
      "requestedId": undefined,
      "requesterId": 5812690998173,
      "status": "open",
      "submitterId": 5812690998173,
      "type": null,
      "url": "https://creativice.zendesk.com/api/v2/tickets/2.json",
    },
    Object {
      "_class": Array [
        "Record",
      ],
      "_key": "zendesk_ticket:3",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "allow_attachments": true,
            "allow_channelback": false,
            "assignee_id": 5812690998173,
            "brand_id": 5812681174557,
            "collaborator_ids": Array [],
            "created_at": "2022-07-11T17:42:31Z",
            "custom_fields": Array [],
            "description": "Test",
            "due_at": null,
            "email_cc_ids": Array [],
            "external_id": null,
            "follower_ids": Array [],
            "followup_ids": Array [],
            "forum_topic_id": null,
            "group_id": 5812638858781,
            "has_incidents": false,
            "id": 3,
            "is_public": true,
            "organization_id": 5812638859421,
            "priority": null,
            "problem_id": null,
            "raw_subject": "test ticket #2",
            "recipient": null,
            "requester_id": 5812690998173,
            "satisfaction_rating": null,
            "sharing_agreement_ids": Array [],
            "status": "open",
            "subject": "test ticket #2",
            "submitter_id": 5812690998173,
            "tags": Array [],
            "ticket_form_id": 5812670359197,
            "type": null,
            "updated_at": "2022-07-11T17:42:31Z",
            "url": "https://creativice.zendesk.com/api/v2/tickets/3.json",
            "via": Object {
              "channel": "web",
              "source": Object {
                "from": Object {},
                "rel": null,
                "to": Object {},
              },
            },
          },
        },
      ],
      "_type": "zendesk_ticket",
      "active": undefined,
      "assigneeEmail": undefined,
      "assigneeId": 5812690998173,
      "brandId": 5812681174557,
      "collaboratorIds": Array [],
      "createdAt": "2022-07-11T17:42:31Z",
      "createdOn": undefined,
      "description": "Test",
      "displayName": "test ticket #2",
      "dueAt": undefined,
      "emailCcIds": Array [],
      "followerIds": Array [],
      "forumTopicId": undefined,
      "groupId": 5812638858781,
      "hasIncidents": false,
      "id": "3",
      "name": "test ticket #2",
      "organizationId": 5812638859421,
      "priority": null,
      "problemId": undefined,
      "queries": Array [
        "Test",
      ],
      "recipient": undefined,
      "requestedId": undefined,
      "requesterId": 5812690998173,
      "status": "open",
      "submitterId": 5812690998173,
      "type": null,
      "url": "https://creativice.zendesk.com/api/v2/tickets/3.json",
    },
    Object {
      "_class": Array [
        "Record",
      ],
      "_key": "zendesk_ticket:4",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "allow_attachments": true,
            "allow_channelback": false,
            "assignee_id": 5812690998173,
            "brand_id": 5812681174557,
            "collaborator_ids": Array [],
            "created_at": "2022-07-11T17:42:39Z",
            "custom_fields": Array [],
            "description": "Test",
            "due_at": null,
            "email_cc_ids": Array [],
            "external_id": null,
            "follower_ids": Array [],
            "followup_ids": Array [],
            "forum_topic_id": null,
            "group_id": 5812638858781,
            "has_incidents": false,
            "id": 4,
            "is_public": true,
            "organization_id": 5812638859421,
            "priority": null,
            "problem_id": null,
            "raw_subject": "test ticket #3",
            "recipient": null,
            "requester_id": 5812690998173,
            "satisfaction_rating": null,
            "sharing_agreement_ids": Array [],
            "status": "open",
            "subject": "test ticket #3",
            "submitter_id": 5812690998173,
            "tags": Array [],
            "ticket_form_id": 5812670359197,
            "type": null,
            "updated_at": "2022-07-11T17:42:39Z",
            "url": "https://creativice.zendesk.com/api/v2/tickets/4.json",
            "via": Object {
              "channel": "web",
              "source": Object {
                "from": Object {},
                "rel": null,
                "to": Object {},
              },
            },
          },
        },
      ],
      "_type": "zendesk_ticket",
      "active": undefined,
      "assigneeEmail": undefined,
      "assigneeId": 5812690998173,
      "brandId": 5812681174557,
      "collaboratorIds": Array [],
      "createdAt": "2022-07-11T17:42:39Z",
      "createdOn": undefined,
      "description": "Test",
      "displayName": "test ticket #3",
      "dueAt": undefined,
      "emailCcIds": Array [],
      "followerIds": Array [],
      "forumTopicId": undefined,
      "groupId": 5812638858781,
      "hasIncidents": false,
      "id": "4",
      "name": "test ticket #3",
      "organizationId": 5812638859421,
      "priority": null,
      "problemId": undefined,
      "queries": Array [
        "Test",
      ],
      "recipient": undefined,
      "requestedId": undefined,
      "requesterId": 5812690998173,
      "status": "open",
      "submitterId": 5812690998173,
      "type": null,
      "url": "https://creativice.zendesk.com/api/v2/tickets/4.json",
    },
    Object {
      "_class": Array [
        "Record",
      ],
      "_key": "zendesk_ticket:5",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "allow_attachments": true,
            "allow_channelback": false,
            "assignee_id": 5812690998173,
            "brand_id": 5812681174557,
            "collaborator_ids": Array [],
            "created_at": "2022-07-11T17:42:46Z",
            "custom_fields": Array [],
            "description": "Test",
            "due_at": null,
            "email_cc_ids": Array [],
            "external_id": null,
            "follower_ids": Array [],
            "followup_ids": Array [],
            "forum_topic_id": null,
            "group_id": 5812638858781,
            "has_incidents": false,
            "id": 5,
            "is_public": true,
            "organization_id": 5812638859421,
            "priority": null,
            "problem_id": null,
            "raw_subject": "test ticket #4",
            "recipient": null,
            "requester_id": 5812690998173,
            "satisfaction_rating": null,
            "sharing_agreement_ids": Array [],
            "status": "open",
            "subject": "test ticket #4",
            "submitter_id": 5812690998173,
            "tags": Array [],
            "ticket_form_id": 5812670359197,
            "type": null,
            "updated_at": "2022-07-11T17:42:46Z",
            "url": "https://creativice.zendesk.com/api/v2/tickets/5.json",
            "via": Object {
              "channel": "web",
              "source": Object {
                "from": Object {},
                "rel": null,
                "to": Object {},
              },
            },
          },
        },
      ],
      "_type": "zendesk_ticket",
      "active": undefined,
      "assigneeEmail": undefined,
      "assigneeId": 5812690998173,
      "brandId": 5812681174557,
      "collaboratorIds": Array [],
      "createdAt": "2022-07-11T17:42:46Z",
      "createdOn": undefined,
      "description": "Test",
      "displayName": "test ticket #4",
      "dueAt": undefined,
      "emailCcIds": Array [],
      "followerIds": Array [],
      "forumTopicId": undefined,
      "groupId": 5812638858781,
      "hasIncidents": false,
      "id": "5",
      "name": "test ticket #4",
      "organizationId": 5812638859421,
      "priority": null,
      "problemId": undefined,
      "queries": Array [
        "Test",
      ],
      "recipient": undefined,
      "requestedId": undefined,
      "requesterId": 5812690998173,
      "status": "open",
      "submitterId": 5812690998173,
      "type": null,
      "url": "https://creativice.zendesk.com/api/v2/tickets/5.json",
    },
    Object {
      "_class": Array [
        "Record",
      ],
      "_key": "zendesk_ticket:6",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "allow_attachments": true,
            "allow_channelback": false,
            "assignee_id": 5812690998173,
            "brand_id": 5812681174557,
            "collaborator_ids": Array [],
            "created_at": "2022-07-11T17:42:55Z",
            "custom_fields": Array [],
            "description": "Test",
            "due_at": null,
            "email_cc_ids": Array [],
            "external_id": null,
            "follower_ids": Array [],
            "followup_ids": Array [],
            "forum_topic_id": null,
            "group_id": 5812638858781,
            "has_incidents": false,
            "id": 6,
            "is_public": true,
            "organization_id": 5812638859421,
            "priority": null,
            "problem_id": null,
            "raw_subject": "test ticket #4",
            "recipient": null,
            "requester_id": 5812690998173,
            "satisfaction_rating": null,
            "sharing_agreement_ids": Array [],
            "status": "open",
            "subject": "test ticket #4",
            "submitter_id": 5812690998173,
            "tags": Array [],
            "ticket_form_id": 5812670359197,
            "type": null,
            "updated_at": "2022-07-11T17:42:55Z",
            "url": "https://creativice.zendesk.com/api/v2/tickets/6.json",
            "via": Object {
              "channel": "web",
              "source": Object {
                "from": Object {},
                "rel": null,
                "to": Object {},
              },
            },
          },
        },
      ],
      "_type": "zendesk_ticket",
      "active": undefined,
      "assigneeEmail": undefined,
      "assigneeId": 5812690998173,
      "brandId": 5812681174557,
      "collaboratorIds": Array [],
      "createdAt": "2022-07-11T17:42:55Z",
      "createdOn": undefined,
      "description": "Test",
      "displayName": "test ticket #4",
      "dueAt": undefined,
      "emailCcIds": Array [],
      "followerIds": Array [],
      "forumTopicId": undefined,
      "groupId": 5812638858781,
      "hasIncidents": false,
      "id": "6",
      "name": "test ticket #4",
      "organizationId": 5812638859421,
      "priority": null,
      "problemId": undefined,
      "queries": Array [
        "Test",
      ],
      "recipient": undefined,
      "requestedId": undefined,
      "requesterId": 5812690998173,
      "status": "open",
      "submitterId": 5812690998173,
      "type": null,
      "url": "https://creativice.zendesk.com/api/v2/tickets/6.json",
    },
  ],
  "collectedRelationships": Array [],
  "encounteredTypes": Array [
    "zendesk_ticket",
  ],
  "numCollectedEntities": 6,
  "numCollectedRelationships": 0,
}
`;
